# onvif-rs

onvif/: Cargo.toml
onvif/examples/: camera.rs  discovery.rs  event.rs
onvif/src/: lib.rs
schema/: Cargo.toml
schema/src/: lib.rs
wsdl_rs/actionengine/: Cargo.toml
wsdl_rs/actionengine/src/: lib.rs
wsdl_rs/analytics/: Cargo.toml
wsdl_rs/analytics/src/: lib.rs
wsdl_rs/authenticationbehavior/: Cargo.toml
wsdl_rs/authenticationbehavior/src/: lib.rs
wsdl_rs/deviceio/: Cargo.toml
wsdl_rs/deviceio/src/: lib.rs
wsdl_rs/devicemgmt/: Cargo.toml
wsdl_rs/devicemgmt/src/: lib.rs
wsdl_rs/display/: Cargo.toml
wsdl_rs/display/src/: lib.rs
wsdl_rs/imaging/: Cargo.toml
wsdl_rs/imaging/src/: lib.rs
wsdl_rs/media/: Cargo.toml
wsdl_rs/media/src/: lib.rs
wsdl_rs/media2/: Cargo.toml
wsdl_rs/media2/src/: lib.rs
wsdl_rs/provisioning/: Cargo.toml
wsdl_rs/provisioning/src/: lib.rs
wsdl_rs/ptz/: Cargo.toml
wsdl_rs/ptz/src/: lib.rs
wsdl_rs/receiver/: Cargo.toml
wsdl_rs/receiver/src/: lib.rs
wsdl_rs/recording/: Cargo.toml
wsdl_rs/recording/src/: lib.rs
wsdl_rs/replay/: Cargo.toml
wsdl_rs/replay/src/: lib.rs
wsdl_rs/search/: Cargo.toml
wsdl_rs/search/src/: lib.rs
wsdl_rs/thermal/: Cargo.toml
wsdl_rs/thermal/src/: lib.rs
