[package]
name = "onvif"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>"]
edition = "2018"
license = "MIT"

[features]
tls = ["reqwest/native-tls"]

[dependencies]
async-recursion = "0.3"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = "0.3"
chrono = "0.4"
digest_auth = "0.3"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
num-bigint = "0.4"
nonzero_ext = "0.3"
ptz = { version = "0.1.0", path = "../wsdl_rs/ptz" }
onvif_xsd = { package = "onvif-xsd", path = "../xsd_rs/onvif_xsd" }
reqwest = { version = "0.12", default-features = false }
schema = { version = "0.1.0", path = "../schema", default-features = false, features = ["analytics", "deviceio", "devicemgmt", "imaging", "event", "media2", "media", "ptz"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6"
sha1 = "0.6"
thiserror = "1.0"
tokio = { version = "1", default-features = false, features = ["net", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
transport = { version = "0.1.0", path = "../transport" }
url = "2"
uuid = { version = "1", features = ["v4"] }
xml-rs = "0.8"
xmltree = "0.10"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
yaserde = "0.7"
yaserde_derive = "0.7"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
futures-util = "0.3"
structopt = "0.3"
tracing-subscriber = "0.2"
b_2 = { path = "../wsdl_rs/b_2" }